--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run-gulp" : "gulp",
-    "test2" : "echo \"hey\""
+    "gulp": "gulp",
+    "mocha": "mocha"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,15 @@
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-open": "^3.0.1",
+    "jsdom": "^11.7.0",
+    "mocha": "^5.0.5",
+    "mocha-jsdom": "^1.1.0",
     "react": "^16.3.1",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.3.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "gulp-mocha": "^5.0.0"
   }
 }
